# es-delete-old-indices

./: .gitignore  Cargo.toml  README.md
src/: main.rs
